@startuml

package User {
    class Employee {
        - id: EmployeeId
        - name: EmployeeName
    }

    class Company {
        - id: number
    }
    Company "1"--"*" Employee
}

package Attendance {
    class AttendanceRecord {
        - id: number
    }

    class AttendanceHistory {
        - id: number
    }

    Employee "1"--"*" AttendanceRecord
    AttendanceRecord "1"--"*" AttendanceHistory
}

@enduml